--- a/styles/main.less
+++ b/styles/main.less
@@ -2,3 +2,27 @@
     background-color: #000;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    font-family: sans-serif;
+    color: #666;
+
+    /* this sets the color for the entire background */
+    background-color: #fff;
+    position: absolute;
+    background-position:50% 50%;
+}
+
+html {
+    width: 100%;
+    height: 100%;
+    min-height: 100%
+}
+
+h1 {
+	// text-align: center;
+	font-family: 'Raleway', sans-serif;
+
+}
