added some styles and login stuff

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,3 +1,28 @@
-.nav{
-    background-color: #000;
+@darkgrey: #909090;
+@white: #fff;
+
+.loginform{
+    width: 100%;
+    form{
+        width: 100%;
+    }
+}
+.maincontent{
+    background-color:#ffa5a5;
+}
+input.formtext{
+    padding: 10px;
+    background-color: @darkgrey;
+    border-color: @darkgrey;
+    border-width: 1px;
+    border-style: solid;
+    width: 50% !important;
+    height: 38px;
+    -webkit-box-shadow: inset 2px 1px 30px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset 2px 1px 30px -1px rgba(0,0,0,0.75);
+    box-shadow: inset 2px 1px 30px -1px rgba(0,0,0,0.75);
+    color: @white;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
 }
