--- a/styles/main.less
+++ b/styles/main.less
@@ -1,5 +1,15 @@
 @darkgrey: #909090;
 @white: #fff;
+@bgc: #c0d8ff;
+
+.brand{
+    color:#fff !important;
+}
+
+html, body{
+    width: 100%;
+    height: 100%;
+}
 
 .loginform{
     width: 100%;
@@ -8,7 +18,9 @@
     }
 }
 .maincontent{
-    background-color:#ffa5a5;
+    background-image: url("../landing_bg.jpg");
+    background-repeat: no-repeat;
+    background-size:cover; 
 }
 input.formtext{
     padding: 10px;
@@ -25,4 +37,29 @@ input.formtext{
     padding-right: 15px;
     padding-left: 15px;
     width: 100%;
+}
+
+a:hover{
+    cursor: pointer !important;
+}
+.navbarcolor{
+    border-style: none;
+    background-color: rgba(255,255,255,0.2);
+    border-radius: 0;
+}
+
+.centeringlol{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.btnsignup{
+    border-radius: 0;
+    border-style:none;
+    background-color: fade(#fff, 50%);
+}
+
+.signuph1{
+    font-size: 60px;
 }
