--- a/styles/main.less
+++ b/styles/main.less
@@ -62,7 +62,7 @@ a:hover{
 
 .signuph1{
     font-size: 60px;
-
+}
 .nav{
     background-color: #000;
 }
@@ -85,9 +85,4 @@ html {
     height: 100%;
     min-height: 100%
 }
-
-h1 {
-	// text-align: center;
-	font-family: 'Raleway', sans-serif;
-
-}
+h1{color:#fff;}
