--- a/styles/main.less
+++ b/styles/main.less
@@ -2,8 +2,12 @@
 @white: #fff;
 @bgc: #c0d8ff;
 
+* {
+  border-radius: 0 !important;
+}
+
 .brand{
-    color:#fff !important;
+    color:#0A556E !important;
 }
 
 html, body{
@@ -54,12 +58,6 @@ a:hover{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.btnsignup{
-    border-radius: 0;
-    border-style:none;
-    background-color: fade(#fff, 50%);
-}
-
 .signuph1{
     font-size: 60px;
 }
@@ -85,6 +83,6 @@ html {
     height: 100%;
     min-height: 100%
 }
-h1{color:#fff;}
+h1{color:#0A556E;}
 
-h2{color:#fff;}
+h2{color:#0A556E;}
